tried to fix the images aligning properly, didn't work.. it's late so i will work on it tomorrow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ aside {
 article {
     flex: 75%;
     padding-left: 40px;
-    padding-right: 40px;
+    padding-right: 20px;
     padding-top: 5px;
     padding-bottom: 5px;
     background-color: #fff;
@@ -98,30 +98,56 @@ footer {
     font-size: 120%;
 }
 
-.portfolio-images {
+.row {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    align-content: space-around;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+}
+
+.justify-center {
+    justify-content:center;
+}
+
+.image-column {
+    padding: 1.5rem;
+    transition: flex-basis 500ms linear;
+    margin-bottom: 1.5rem;
 }
 
 .main-image {
-    position: relative;
-    border: 7px solid #92cccd;
-    object-fit:cover;
-    height: 800px;
-    width: 100%;
-    margin: 2%;
+    display: flex;
+    min-height: 100%;
+    padding: 2rem;
+    height: 500px;
+    border: 5px solid #fff;
+    opacity: 50%;
+    flex: 1 1 100%;
 }
 
 .work-image {
-    border: 7px solid #92cccd;
-    object-fit:cover;
+    display: flex;
+    min-height: 50%;
+    padding: 2rem;
     height: 300px;
-    width: 45%;
-    margin: 2%;
+    opacity: 50%;
+    flex: 1 1 40%;
+}
+
+.main-image .image-header,
+.work-image .image-header {
+    position: relative;
+    margin:2px;
+    padding: 1px;
+    border: 2px solid;
+    border-radius: 2px;
+    transition: all 0.5s ease-in-out;
+}
+
+.main-image:hover,
+.work-image:hover {
+    opacity: 100%;
 }
 
 .contact-section {
@@ -138,10 +164,11 @@ footer {
 }
 
 @media screen and (max-width: 992px) {
-    header, .portfolio-images {
-        display: flex;
-        flex-direction: column;
+    header {
+        width: 75%
     }
-    
-    .
+    .image-column {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
 }
